fix(app): fix overflow issues in ipados and ios safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    @apply h-full overflow-hidden;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply h-full overflow-hidden bg-background text-foreground;
   }
 }
